# backgenerado

./: .gitignore  README.md  RUNBOOK.md  afip_token_cache.json  afip_token_cache_padron.json  afip_token_cache_ws_sr_padron_a5.json  afip_token_cache_wsfe.json  alembic.ini  audit_backend.py  backend_audit_report.txt  backend_audit_report_v2.txt  check_afip_iva.py  check_db.py  check_db_schema.py  check_moneda.py  check_params.py  check_sync.py  check_table_counts.py  check_tipos_cbte.py  create_admin.py  debug_clients.py  debug_output.txt  debug_repo.py  error_log.txt  error_log_2.txt  exporta_yaml.py  facturacion_afip.json  fix_db_enums.py  fix_db_enums_hard.py  fix_menu_gap.py  fix_schema.py  generate_long_token.py  inspect_roles.py  list_tabs.py  list_users.py  migrate_cc.py  migrate_voucher.py  package-lock.json  package.json  procedimiento_diario_requerimientos.md  (+14 more)
.agent/: WORKFLOW_README.md
.agent/checklists/: gate_afip.md  gate_architecture.md  gate_baseline.md  gate_delivery.md  gate_hotfix.md  gate_hotfix_classification.md  gate_prd.md  gate_release.md  gate_workflow_10_sad.md  stabilization-hotfix.md  stabilization-scan.md
.agent/governance/: README.md  workflow_70_71_alignment.md  workflow_70_72_alignment.md
.agent/policies/: language.md
.agent/roles/: architect.md  qa.md  (+11 more)
.templates/: adr.md  afip_integration_plan.md  api_contract.md  data_model.md  fix_description.md  fix_description_functional.md  fix_description_technical.md  impact_analysis.md  input_request.md  prd.md  reconciliation_plan.md  reglas_fiscales_ar.md  release_checklist.md  runbook.md  runbook_afip.md  status_functional.md  status_technical.md  test_plan.md  user_stories.md
alembic/: README  env.py
app/: main.py
docs/: DESIGN_SYSTEM_UI.md  DOMAIN_RULES_BILLING.md  SYSTEM_FOUNDATION.md
frontend/: ARCHITECTURE.md  ARCHITECTURE_DESIGN.md  README.md  eslint.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
pruebas/: openapi.yaml  script_pruebas.py
scripts/: check_role_assignments.py  check_routes.js  debug_tree.js  detect_crud.js  fix_hf_tech_002.py  fix_recibo_menu.py  fix_seguridad_menu.py  fix_tipoimpuesto_schema.py  init_db.py  insert_punto_venta_menu.py  inspect_db_menu.py  inspect_seguridad_menu.js  list_menu_items.py  list_roles.py  migration_add_orden.py  scan_backend.py  seed_afip_impuestos_generales.py  seed_afip_tributos.py  seed_articulos.py  seed_final_taxes.py  seed_rediseño_impuestos.py  verify_menu.py  verify_orm.py
tests/: Billing Backend System.postman_collection.json  Development.postman_environment.json  conftest.py  test_comprobante_draft.py  test_healthcheck.py  test_recibo.py
(+1296 files in other folders)
