[tool.poetry]
name = "backendfacturacion"
version = "0.1.0"
description = "Proyecto con FastAPI + SQLAlchemy 2 + Pydantic 2 + Clean Architecture"
authors = ["Ivan Risso <ivanrisso@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

# Core web stack
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }

# ORM y DB
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"

# Validación
pydantic = { extras = ["email"], version = "^2.7.1" }
pydantic-settings = "^2.2.1"

# Seguridad
passlib = "^1.7.4"

# Conectores a BD (podés usar uno u otro)
mysql-connector-python = "^8.4.0" # MySQL

# Utilidades
python-dotenv = "^1.0.1"
itsdangerous = "^2.1.2"

# Dev tools (opcional)
ipython = "^8.24.0"
ptvsd = "^4.3.2"
aiomysql = "^0.2.0"
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
python-json-logger = "^3.3.0"
bcrypt = "4.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
pytest = "^8.2.1"
httpx = "^0.27.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
