[tool.poetry]
name = "backendfacturacion"
version = "0.1.0"
description = "Proyecto con FastAPI + SQLAlchemy 2 + Pydantic 2 + Clean Architecture"
authors = ["Ivan Risso <ivanrisso@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

# Core web stack
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }

# ORM y DB
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"

# Validación
pydantic = { extras = ["email"], version = "^2.7.1" }
pydantic-settings = "^2.2.1"

# Seguridad
passlib = "^1.7.4"

# Conectores a BD (podés usar uno u otro)
mysql-connector-python = "^8.4.0" # MySQL

# Utilidades
python-dotenv = "^1.0.1"
itsdangerous = "^2.1.2"

# Dev tools (opcional)
ipython = "^8.24.0"
ptvsd = "^4.3.2"
aiomysql = "^0.2.0"
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
python-json-logger = "^3.3.0"
bcrypt = "4.0.1"
requests = "^2.32.3"
pyyaml = "^6.0.2"
httpx = "^0.28.1"
pytest = "^8.3.5"
faker = "^37.3.0"
pytest-asyncio = "^1.0.0"
pyopenssl = "^25.1.0"
cryptography = "^45.0.3"
zeep = "^4.3.1"
requests-pkcs12 = "^1.25"
asyncmy = "^0.2.10"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
pytest-mock = "^3.15.1"
httpx = "^0.28.1"
pytest-asyncio = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
